solve weird overflow issue from using vw

--- a/styles.css
+++ b/styles.css
@@ -53,14 +53,14 @@ button {
 }
 
 #main {
-    align-items: center;
+    align-items: stretch;
 }
 
 header {
     color: white;
     font-family: var(--serif);
     font-size: 1rem;
-    align-self: stretch;
+    /* align-self: stretch; */
 }
 
 ul {
@@ -148,11 +148,11 @@ a {
 }
 
 #quality {
-    max-width: 79em;
+    max-width: 90em;
     justify-content: space-between;
     /* margin: 2rem; */
     /* box-sizing: border-box; */
-    width: 100vw;
+    width: 100%;
 }
 
 .card {
@@ -272,8 +272,8 @@ footer {
     color: var(--primary-color);
     box-sizing: border-box;
     border: 0.5rem solid var(--primary-color);
-    width: calc(100vw - 1rem);
-    
+    /* width: calc(100vw - 1rem); */
+    /* align-self: stretch; */
 }
 
 #footer-container {
@@ -325,8 +325,9 @@ footer {
     justify-content: space-between;
     background-color: var(--primary-color);
     color: white;
-    width: calc(100vw - 3rem);
+    /* width: calc(100vw - 3rem); */
     font-family: var(--serif);
+    /* align-self: stretch; */
 }
 
 /* #footer-logo {
